[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Athanasios Kouras <tkour@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
jupyter = "^1.0.0"
requests = "^2.31.0"
pyarrow = "^14.0.1"
pandas = "^2.0.0"
tqdn = "^0.2.1"
tqdm = "^4.66.1"
plotly = "^5.18.0"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
lightgbm = "^4.1.0"
optuna = "^3.4.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
